--- a/TODOs/TODOs/Classes/TodoCell.xib
+++ b/TODOs/TODOs/Classes/TodoCell.xib
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="TodoCell" editingAccessoryType="checkmark" rowHeight="65" id="h2z-I3-zh6" customClass="TodoCell" customModule="TODOs" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="400" height="65"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="TodoCell" editingAccessoryType="checkmark" rowHeight="212" id="h2z-I3-zh6" customClass="TodoCell" customModule="TODOs" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="400" height="233"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="h2z-I3-zh6" id="Zws-an-4WZ">
-                <rect key="frame" x="0.0" y="0.0" width="400" height="65"/>
+                <rect key="frame" x="0.0" y="0.0" width="400" height="233"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TODO" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x5r-t8-Wqe">
-                        <rect key="frame" x="20" y="20" width="47.5" height="25"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TODOTODOTODOTODOTODOTODOTODOTODOTODOTODOTODOTODOTODOTODOTODOTODO" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x5r-t8-Wqe">
+                        <rect key="frame" x="20" y="20" width="360" height="61"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
@@ -24,9 +24,9 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="x5r-t8-Wqe" firstAttribute="leading" secondItem="Zws-an-4WZ" secondAttribute="leading" constant="20" id="KJA-kw-6CW"/>
+                    <constraint firstItem="x5r-t8-Wqe" firstAttribute="leading" secondItem="Zws-an-4WZ" secondAttribute="leading" constant="20" symbolic="YES" id="0ik-F8-jyF"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="x5r-t8-Wqe" secondAttribute="bottom" constant="20" symbolic="YES" id="f6c-DU-T3s"/>
-                    <constraint firstItem="x5r-t8-Wqe" firstAttribute="centerY" secondItem="Zws-an-4WZ" secondAttribute="centerY" id="hsB-Fq-YXm"/>
+                    <constraint firstAttribute="trailing" secondItem="x5r-t8-Wqe" secondAttribute="trailing" constant="20" symbolic="YES" id="g7l-Iv-CGF"/>
                     <constraint firstItem="x5r-t8-Wqe" firstAttribute="top" secondItem="Zws-an-4WZ" secondAttribute="top" constant="20" symbolic="YES" id="riu-Jr-hBs"/>
                 </constraints>
             </tableViewCellContentView>
@@ -34,7 +34,7 @@
             <connections>
                 <outlet property="todoLabel" destination="x5r-t8-Wqe" id="b0x-PC-NC9"/>
             </connections>
-            <point key="canvasLocation" x="-27.536231884057973" y="88.727678571428569"/>
+            <point key="canvasLocation" x="-27.536231884057973" y="144.97767857142856"/>
         </tableViewCell>
     </objects>
 </document>
