--- a/TODOs/TODOs/Storyboards/Base.lproj/Main.storyboard
+++ b/TODOs/TODOs/Storyboards/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="9Vt-fV-Urb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="9Vt-fV-Urb">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -31,58 +31,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h1a-3d-UCR">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M9l-6J-LGI">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="600"/>
-                                        <subviews>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="374" placeholderIntrinsicHeight="200" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="f8n-09-NiV">
-                                                <rect key="frame" x="20" y="20" width="374" height="200"/>
-                                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="200" id="5Ul-RA-K08"/>
-                                                </constraints>
-                                                <connections>
-                                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="Wv4-8y-Sru"/>
-                                                    <outlet property="delegate" destination="BYZ-38-t0r" id="24J-AZ-ZfJ"/>
-                                                </connections>
-                                            </tableView>
-                                        </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="600" id="1vd-3T-pmz"/>
-                                            <constraint firstItem="f8n-09-NiV" firstAttribute="leading" secondItem="M9l-6J-LGI" secondAttribute="leading" constant="20" symbolic="YES" id="5X6-ey-aBc"/>
-                                            <constraint firstItem="f8n-09-NiV" firstAttribute="top" secondItem="M9l-6J-LGI" secondAttribute="top" constant="20" symbolic="YES" id="F24-4T-gq5"/>
-                                            <constraint firstAttribute="trailing" secondItem="f8n-09-NiV" secondAttribute="trailing" constant="20" symbolic="YES" id="Iir-lF-VGi"/>
-                                        </constraints>
-                                    </view>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <constraints>
-                                    <constraint firstItem="M9l-6J-LGI" firstAttribute="top" secondItem="h1a-3d-UCR" secondAttribute="top" id="34j-R9-kC0"/>
-                                    <constraint firstItem="M9l-6J-LGI" firstAttribute="width" secondItem="h1a-3d-UCR" secondAttribute="width" id="BhV-ol-X5q"/>
-                                    <constraint firstAttribute="trailing" secondItem="M9l-6J-LGI" secondAttribute="trailing" id="X6O-2L-QWc"/>
-                                    <constraint firstAttribute="bottom" secondItem="M9l-6J-LGI" secondAttribute="bottom" id="bT0-2F-Snv"/>
-                                    <constraint firstItem="M9l-6J-LGI" firstAttribute="leading" secondItem="h1a-3d-UCR" secondAttribute="leading" id="epn-3j-FrS"/>
-                                </constraints>
-                                <viewLayoutGuide key="contentLayoutGuide" id="8br-ex-7Ze"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="nYE-jW-oK7"/>
-                            </scrollView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="374" placeholderIntrinsicHeight="200" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="f8n-09-NiV">
+                                <rect key="frame" x="20" y="88" width="374" height="774"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="Wae-9B-Dx2"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="sA6-ae-Ooc"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="h1a-3d-UCR" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Olw-x6-Pc7"/>
-                            <constraint firstItem="h1a-3d-UCR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Oyp-Zg-zb4"/>
-                            <constraint firstItem="h1a-3d-UCR" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="ghf-38-b8u"/>
-                            <constraint firstItem="h1a-3d-UCR" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="twN-wh-GhB"/>
+                            <constraint firstItem="f8n-09-NiV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="7oh-kq-ISq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="f8n-09-NiV" secondAttribute="bottom" id="94J-dZ-f8n"/>
+                            <constraint firstItem="f8n-09-NiV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="GdZ-Yz-dzj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="f8n-09-NiV" secondAttribute="trailing" constant="20" id="po7-i5-9Ua"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="TODOs" id="uzk-y5-BPN"/>
                     <connections>
-                        <outlet property="tableView" destination="f8n-09-NiV" id="s13-bM-n5b"/>
-                        <outlet property="tableViewHeight" destination="5Ul-RA-K08" id="1sa-iu-a1X"/>
+                        <outlet property="tableView" destination="f8n-09-NiV" id="v0J-EB-2ZC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
