--- a/TODOs/TODOs/Classes/TodoCell.xib
+++ b/TODOs/TODOs/Classes/TodoCell.xib
@@ -8,15 +8,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="TodoCell" editingAccessoryType="checkmark" rowHeight="212" id="h2z-I3-zh6" customClass="TodoCell" customModule="TODOs" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="400" height="233"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="TodoCell" editingAccessoryType="checkmark" rowHeight="72" id="h2z-I3-zh6" customClass="TodoCell" customModule="TODOs" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="394" height="93"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="h2z-I3-zh6" id="Zws-an-4WZ">
-                <rect key="frame" x="0.0" y="0.0" width="400" height="233"/>
+                <rect key="frame" x="0.0" y="0.0" width="394" height="93"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TODOTODOTODOTODOTODOTODOTODOTODOTODOTODOTODOTODOTODOTODOTODOTODO" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x5r-t8-Wqe">
-                        <rect key="frame" x="20" y="20" width="360" height="61"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TODO" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x5r-t8-Wqe">
+                        <rect key="frame" x="20" y="20" width="354" height="20.5"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
@@ -34,7 +34,7 @@
             <connections>
                 <outlet property="todoLabel" destination="x5r-t8-Wqe" id="b0x-PC-NC9"/>
             </connections>
-            <point key="canvasLocation" x="-27.536231884057973" y="144.97767857142856"/>
+            <point key="canvasLocation" x="-31.884057971014496" y="97.433035714285708"/>
         </tableViewCell>
     </objects>
 </document>
