--- a/TODOs/TODOs/Storyboards/Base.lproj/Main.storyboard
+++ b/TODOs/TODOs/Storyboards/Base.lproj/Main.storyboard
@@ -31,8 +31,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="374" placeholderIntrinsicHeight="200" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="f8n-09-NiV">
-                                <rect key="frame" x="20" y="88" width="374" height="774"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="374" placeholderIntrinsicHeight="200" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="f8n-09-NiV">
+                                <rect key="frame" x="20" y="0.0" width="374" height="862"/>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="Wae-9B-Dx2"/>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="sA6-ae-Ooc"/>
@@ -43,12 +43,12 @@
                         <constraints>
                             <constraint firstItem="f8n-09-NiV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="7oh-kq-ISq"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="f8n-09-NiV" secondAttribute="bottom" id="94J-dZ-f8n"/>
-                            <constraint firstItem="f8n-09-NiV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="GdZ-Yz-dzj"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="f8n-09-NiV" secondAttribute="trailing" constant="20" id="po7-i5-9Ua"/>
+                            <constraint firstItem="f8n-09-NiV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="woO-Ip-ElL"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" title="TODOs" id="uzk-y5-BPN"/>
+                    <navigationItem key="navigationItem" title="TODOs" largeTitleDisplayMode="always" id="uzk-y5-BPN"/>
                     <connections>
                         <outlet property="tableView" destination="f8n-09-NiV" id="v0J-EB-2ZC"/>
                     </connections>
