--- a/TODOs/TODOs/Classes/TodoCell.xib
+++ b/TODOs/TODOs/Classes/TodoCell.xib
@@ -8,33 +8,34 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="TodoCell" editingAccessoryType="checkmark" rowHeight="72" id="h2z-I3-zh6" customClass="TodoCell" customModule="TODOs" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="394" height="93"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="TodoCell" editingAccessoryType="checkmark" rowHeight="100" id="h2z-I3-zh6" customClass="TodoCell" customModule="TODOs" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="378" height="121"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="h2z-I3-zh6" id="Zws-an-4WZ">
-                <rect key="frame" x="0.0" y="0.0" width="394" height="93"/>
+                <rect key="frame" x="0.0" y="0.0" width="378" height="121"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TODO" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x5r-t8-Wqe">
-                        <rect key="frame" x="20" y="20" width="354" height="20.5"/>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="TODO Item" translatesAutoresizingMaskIntoConstraints="NO" id="TSm-JL-ifc">
+                        <rect key="frame" x="20" y="20" width="338" height="33"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                        <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES" calendarEvent="YES" shipmentTrackingNumber="YES" flightNumber="YES" lookupSuggestion="YES"/>
+                    </textView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="x5r-t8-Wqe" firstAttribute="leading" secondItem="Zws-an-4WZ" secondAttribute="leading" constant="20" symbolic="YES" id="0ik-F8-jyF"/>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="x5r-t8-Wqe" secondAttribute="bottom" constant="20" symbolic="YES" id="f6c-DU-T3s"/>
-                    <constraint firstAttribute="trailing" secondItem="x5r-t8-Wqe" secondAttribute="trailing" constant="20" symbolic="YES" id="g7l-Iv-CGF"/>
-                    <constraint firstItem="x5r-t8-Wqe" firstAttribute="top" secondItem="Zws-an-4WZ" secondAttribute="top" constant="20" symbolic="YES" id="riu-Jr-hBs"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="TSm-JL-ifc" secondAttribute="bottom" constant="20" symbolic="YES" id="3az-dy-u1z"/>
+                    <constraint firstItem="TSm-JL-ifc" firstAttribute="top" secondItem="Zws-an-4WZ" secondAttribute="top" constant="20" symbolic="YES" id="gWy-T6-4NE"/>
+                    <constraint firstItem="TSm-JL-ifc" firstAttribute="leading" secondItem="Zws-an-4WZ" secondAttribute="leading" constant="20" symbolic="YES" id="tHI-2v-Mro"/>
+                    <constraint firstAttribute="trailing" secondItem="TSm-JL-ifc" secondAttribute="trailing" constant="20" symbolic="YES" id="x5G-wN-F01"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
             <connections>
-                <outlet property="todoLabel" destination="x5r-t8-Wqe" id="b0x-PC-NC9"/>
+                <outlet property="textView" destination="TSm-JL-ifc" id="0B2-9W-egG"/>
             </connections>
-            <point key="canvasLocation" x="-31.884057971014496" y="97.433035714285708"/>
+            <point key="canvasLocation" x="-43.478260869565219" y="106.80803571428571"/>
         </tableViewCell>
     </objects>
 </document>
