--- a/TODOs/Classes/TodoCell.xib
+++ b/TODOs/Classes/TodoCell.xib
@@ -15,7 +15,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="378" height="121"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="TODO Item" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TSm-JL-ifc">
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="TODO Item" translatesAutoresizingMaskIntoConstraints="NO" id="TSm-JL-ifc">
                         <rect key="frame" x="20" y="20" width="338" height="33"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                         <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
