--- a/TODOs/Classes/AddTodoCell.xib
+++ b/TODOs/Classes/AddTodoCell.xib
@@ -15,7 +15,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="378" height="121"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="New TODO.." selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TxH-Y3-Dlk" userLabel="Placeholder View">
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="add.." selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TxH-Y3-Dlk" userLabel="Placeholder View">
                         <rect key="frame" x="20" y="20" width="338" height="33"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                         <color key="textColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
