--- a/TODOs/Classes/TodoCell.xib
+++ b/TODOs/Classes/TodoCell.xib
@@ -31,6 +31,7 @@
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+            <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
             <connections>
                 <outlet property="textView" destination="TSm-JL-ifc" id="0B2-9W-egG"/>
             </connections>
